Loom overhaul